--- a/templates/tutorial/view_chapter.html
+++ b/templates/tutorial/view_chapter.html
@@ -45,52 +45,61 @@
 
 {% block headline-sub-actions %}
     {% if user in chapter.part.tutorial.authors.all or user in chapter.tutorial.authors.all %}
-        <li><a href="{% url "zds.tutorial.views.edit_chapter" %}?chapitre={{ chapter.pk }}&version={{version}}" >Éditer le chapître</a></li>
-        <li><a href="{% url "zds.tutorial.views.add_extract" %}?chapitre={{ chapter.pk }}">Ajouter un extrait</a></li>
-        <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST">
-            {% if chapter.part %}
-            <li><button type="submit" name="delete">Supprimer</button></li>
-            {% endif %}
-            <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
-            {% csrf_token %}
-        </form>
+        <li><a href="{% url "zds.tutorial.views.edit_chapter" %}?chapitre={{ chapter.pk }}&version={{version}}" ><span class="fi-pencil grey size-16"></span> Éditer le chapître</a></li>
+        <li><a href="{% url "zds.tutorial.views.add_extract" %}?chapitre={{ chapter.pk }}"><span class="fi-plus grey size-16"></span> Ajouter un extrait</a></li>
         {% if chapter.part %}
-        <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST" class="custom">
-            <select name="move_target" class="select-autosubmit">
-                <option>Déplacer</option>
-            {% if chapter.position_in_part > 1 %}
-                <option value="{{ chapter.position_in_part|add:"-1" }}">Monter</option>
-            {% endif %}
-            {% if chapter.position_in_part < chapter.part.get_chapters.count %}
-                <option value="{{ chapter.position_in_part|add:"1" }}">Descendre</option>
-            {% endif %}
-                <option disabled>&mdash; Déplacer avant</option>
-            {% for chapter_mv in chapter.part.get_chapters %}
-                {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"-1" != chapter.position_in_part %}
-                <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part }}{% else %}{{ chapter_mv.position_in_part|add:"-1" }}{% endif %}">
-                        Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
-                </option>
+        <li>
+            <a href="#" class="tiny secondary actions" data-dropdown="delchapter"><span class="fi-x size-16"></span> Supprimer le chapitre</a>
+        </li>
+        <div id="delchapter" class="f-dropdown small content" data-dropdown-content>
+            <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST">
+                <p>Attention, vous vous appretez à supprimer votre chapitre</p>
+                <button type="submit" class="tiny secondary alert" name="delete">Confirmation</button>
+                <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
+                {% csrf_token %}
+            </form>
+        </div>
+        {% endif %}
+        {% if chapter.part %}
+        <li>
+            <a href="#" class="tiny secondary actions" data-dropdown="movechapter"><span class="fi-arrows-out size-16"></span> Déplacer le chapitre</a>
+        </li>
+        <div id="movechapter" class="f-dropdown small content" data-dropdown-content>
+            <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST" class="custom">
+                <select name="move_target" class="select-autosubmit">
+                    <option>Déplacer</option>
+                {% if chapter.position_in_part > 1 %}
+                    <option value="{{ chapter.position_in_part|add:"-1" }}">Monter</option>
                 {% endif %}
-            {% endfor %}
-            <option disabled>&mdash; Déplacer après</option>
-            {% for chapter_mv in chapter.part.get_chapters %}
-                {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"1" != chapter.position_in_part %}
-                <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part|add:"1" }}{% else %}{{ chapter_mv.position_in_part }}{% endif %}">
-                        Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
-                </option>
+                {% if chapter.position_in_part < chapter.part.get_chapters.count %}
+                    <option value="{{ chapter.position_in_part|add:"1" }}">Descendre</option>
                 {% endif %}
-            {% endfor %}
-            </select>
-            <noscript>
-                <button type="submit" class="button">
-                    Déplacer
+                    <option disabled>&mdash; Déplacer avant</option>
+                {% for chapter_mv in chapter.part.get_chapters %}
+                    {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"-1" != chapter.position_in_part %}
+                    <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part }}{% else %}{{ chapter_mv.position_in_part|add:"-1" }}{% endif %}">
+                            Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
+                    </option>
+                    {% endif %}
+                {% endfor %}
+                <option disabled>&mdash; Déplacer après</option>
+                {% for chapter_mv in chapter.part.get_chapters %}
+                    {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"1" != chapter.position_in_part %}
+                    <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part|add:"1" }}{% else %}{{ chapter_mv.position_in_part }}{% endif %}">
+                            Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
+                    </option>
+                    {% endif %}
+                {% endfor %}
+                </select>
+                <button type="submit" class="button tiny secondary">
+                    Confirmer
                 </button>
-            </noscript>
 
-            <input type="hidden" name="move" value="" />
-            <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
-            {% csrf_token %}
-        </form>
+                <input type="hidden" name="move" value="" />
+                <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
+                {% csrf_token %}
+            </form>
+        </div>
         {% endif %}
     {% endif %}
 {% endblock %}
