--- a/templates/tutorial/view_part_online.html
+++ b/templates/tutorial/view_part_online.html
@@ -45,7 +45,7 @@
     {% if perms.tutorial.change_tutorial%}
     <h3>Administration</h3>
     <ul>
-        <li><a href="{{ part.tutorial.get_absolute_url }}">Version offline</a></li>
+        <li><a href="{{ part.tutorial.get_absolute_url }}"><span class="fi-arrow-left size-16"></span> Version offline</a></li>
     </ul>
     {% endif %}
     {% with tutorial=part.tutorial %}
