--- a/templates/mp/details.html
+++ b/templates/mp/details.html
@@ -44,6 +44,6 @@
     {% endfor %}
 </div>
 
-{% include "forum/details_pagination.part.html" %}
+{% include "misc/pagination.part.html" with position='bottom' %}
 
 {% endblock %}
