--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -4,34 +4,53 @@
 {% load profile %}
 {% load crispy_forms_tags %}
 
+
+
 {% block title %}
     {{ topic.title }}
 {% endblock %}
 
+
+
 {% block headline %}
-    <h2>{{ topic.title }}</h2>
+    {{ topic.title }}
 {% endblock %}
+
+
 
 {% block headline_sub %}
-    <h3 class="subtitle">{{ topic.subtitle }}</h3>
+    {{ topic.subtitle }}
 {% endblock %}
 
+
+
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ topic.title }}</a></li>
+    <li class="current">{{ topic.title }}</li>
 {% endblock %}
+
+
 
 {% block sidebar_actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions<span class="wide"> sur ce MP</span></h3>
-        <ul>
-            {% if user.is_authenticated %}
-            <li><a href="{% url "zds.mp.views.new" %}">Nouvel MP</a></li>
-            {% endif %}
+        <h3>Actions</h3>
+        <ul class="sidebar-standalone">
+            <li>
+                <a href="{% url "zds.mp.views.new" %}">
+                    Nouvelle conversation
+                </a>
+            </li>
+
             {% if topic.author == user %}
-            <li><a href="#">Ajouter un membre</a></li>
+                {# TODO : implémenter / mettre le bon lien #}
+                <li>
+                    <a href="#">
+                        Ajouter un membre
+                    </a>
+                </li>
             {% endif %}
         </ul>
     </div>
+
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Participants">
         <h3>Participants</h3>
         <ul>
@@ -45,60 +64,81 @@
 
 {% block content %}
 
-{% for post in posts %}
-<article class="forum-message {% if post.is_useful %} helpful {% endif %}">
-    <div class="user" id="p{{ post.id }}">
-        <a href="{{ post.author.get_absolute_url }}" class="avatar-link">
-            {% with profile=post.author|profile %}
-            <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
-            {% endwith %}
-        </a>
-    </div>
-    <div class="message">
-        {% if user.is_authenticated %}
-        <ul class="message-actions">
-            {% if post.author = user or perms.forum.change_post %}
-            <li><a href="{% url "zds.mp.views.edit_post" %}?message={{ post.pk }}" class="ico-after edit">Editer</a></li>
-            {% endif %}
-            {% if not topic.is_locked and not topic.antispam %}
-            <li><a href="{% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ post.pk }}" class="ico-after cite">Citer</a></li>
-            {% endif %}
-        </ul>
-        {% endif %}
+    {% include "misc/pagination.part.html" with position="top" %}
 
-        <div class="message-metadata">
-            <a href="{{ post.author.get_absolute_url }}" class="username">{{ post.author.username }}</a>
-            <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
-            {% if not post.update = None %}
-            <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
-            {% endif %}
-        </div>
+{% comment %}
+    {% for post in posts %}
+        <article class="forum-message {% if post.is_useful %} helpful {% endif %}">
+            <div class="user" id="p{{ post.id }}">
+                <a href="{{ post.author.get_absolute_url }}" class="avatar-link">
+                    {% with profile=post.author|profile %}
+                    <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
+                    {% endwith %}
+                </a>
+            </div>
+            <div class="message">
+                {% if user.is_authenticated %}
+                <ul class="message-actions">
+                    {% if post.author = user or perms.forum.change_post %}
+                    <li><a href="{% url "zds.mp.views.edit_post" %}?message={{ post.pk }}" class="ico-after edit">Editer</a></li>
+                    {% endif %}
+                    {% if not topic.is_locked and not topic.antispam %}
+                    <li><a href="{% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ post.pk }}" class="ico-after cite">Citer</a></li>
+                    {% endif %}
+                </ul>
+                {% endif %}
 
-        <div class="message-content">
-            {{ post.text|emarkdown }}
-        </div>
+                <div class="message-metadata">
+                    <a href="{{ post.author.get_absolute_url }}" class="username">{{ post.author.username }}</a>
+                    <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
+                    {% if not post.update = None %}
+                    <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
+                    {% endif %}
+                </div>
 
-        <div class="message-bottom">
-            {% with profile=post.author|profile %}
-            <p class="signature"> {{profile.sign|emarkdown_inline}} </p>
-            {% endwith %}
-        </div>
-    </div>
-</article>
-{% endfor %}
+                <div class="message-content">
+                    {{ post.text|emarkdown }}
+                </div>
 
-{% include "mp/topic_pagination.part.html" %}
+                <div class="message-bottom">
+                    {% with profile=post.author|profile %}
+                    <p class="signature"> {{profile.sign|emarkdown_inline}} </p>
+                    {% endwith %}
+                </div>
+            </div>
+        </article>
+    {% endfor %}
+{% endcomment %}
 
-{% if user.is_authenticated %}
-{% with profile=user|profile%}
-<section>
-    <div class="user">
-        <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
-    </div>
-    {% crispy form %}
-</section>
-{% endwith %}
-{% endif %}
 
+    {% for message in posts %}
+        {% captureas edit_link %}
+            {% url "zds.mp.views.edit_post" %}?message={{ post.pk }}
+        {% endcaptureas %}
+
+        {% captureas alert_link %}
+            {# TODO : Lien de signalement #}
+        {% endcaptureas %}
+
+        {% captureas cite_link %}
+            {% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ post.pk }}
+        {% endcaptureas %}
+
+        {% include 'misc/message.part.html' %}
+    {% endfor %}
+
+
+    {% include "misc/pagination.part.html" with position="bottom" %}
+
+
+
+    {% with profile=user|profile %}
+        <section>
+            <div class="user">
+                <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
+            </div>
+
+            {% crispy form %}
+        </section>
+    {% endwith %}
 {% endblock %}
-
