--- a/templates/mp/new.html
+++ b/templates/mp/new.html
@@ -23,7 +23,7 @@
 
 {% if form.text.value %}
     {% with text=form.text.value %}
-        {% include "forum/previsualization.part.html" %}
+        {% include "misc/previsualization.part.html" %}
     {% endwith %}
 {% endif %}
 
