--- a/templates/tutorial/edit_note.html
+++ b/templates/tutorial/edit_note.html
@@ -27,7 +27,7 @@
 
 {% if form.text.value %}
     {% with text=form.text.value %}
-        {% include "forum/previsualization.part.html" %}
+        {% include "misc/previsualization.part.html" %}
     {% endwith %}
 {% endif %}
 
