--- a/templates/misc/message.part.html
+++ b/templates/misc/message.part.html
@@ -60,8 +60,9 @@
         </div>
 
         <div class="message-content">
-            {% if not message.is_visible %}
+            {% if message.is_visible and message.is_visible == false %}
                 <p class="message-hidden">
+                    {{ message.is_visible }}
                     Masqué par {{ message.editor }} : {{ message.text_hidden }}
                 </p>
             {% elif not message.update = None %}
@@ -70,12 +71,12 @@
                 </p>
             {% endif %}
 
-            {% if message.is_visible %}
+            {% if not message.is_visible or message.is_visible != false %}
                 {{ message.text|emarkdown }}
             {% endif %}
         </div>
 
-        {% if message.is_visible %}
+        {% if not message.is_visible or message.is_visible != false %}
             <div class="message-bottom">
                 {% if user.is_authenticated %}
                     {% with profile_user=user|profile %}
