Template refacto : article reactions

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -556,10 +556,6 @@
                 }
             }
 
-            button {
-                width: 100%;
-            }
-
             a,
             button {
                 display: block;
@@ -648,6 +644,11 @@
                         }
                     }
                 }
+            }
+
+            button {
+                width: 100%;
+                line-height: 28px;
             }
 
 
