--- a/templates/mp/base.html
+++ b/templates/mp/base.html
@@ -17,3 +17,11 @@
 {% block menu_mp %}
     active
 {% endblock %}
+
+
+
+{% block sidebar %}
+    <aside class="sidebar mobile-menu-hide">
+        {% block sidebar_actions %}{% endblock %}
+    </aside>
+{% endblock %}
