--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -92,7 +92,7 @@
             {% for topic in topics %}
             <div class="row">
             <div class="large-12 columns">
-                <h4><a href="{{ topic.get_absolute_url_online }}">{{ topic.title }}</a></h4>
+                <h4><a href="{{ topic.get_absolute_url }}">{{ topic.title }}</a></h4>
                 <h5>{{ topic.subtitle }}</h5>
             </div>
             </div>
