--- a/assets/scss/_editor.scss
+++ b/assets/scss/_editor.scss
@@ -5,7 +5,7 @@
 .zform-toolbar {
     /*@include display(flex);*/
     margin: 0 0 0 10px;
-    padding: 0;
+    padding: 2px;
     list-style-position: initial;
     list-style-image: none;
     list-style-type: none;
